# yda

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CMakeTests/: FindSDL2_image.cmake
cmake/: YPlatform.h.in
include/: CMakeLists.txt  YAnimated.h  YAnimatedSprite.h  YFileSystem.h  YGameObject.h  YMain.h  YObject.h  YObjectManager.h  YPlatform.h  YPoint.h  YRect.h  YSTL.h  YSize.h  YSprite.h  YSpriteHeader.h  YSpriteManager.h  YSpriteSheet.h  YSpriteSheetManager.h  YTransformations.h  YVector.h
samples/: CMakeLists.txt
samples/jump/: Box  Box.cpp  Box.h  CMakeLists.txt  main.cpp
samples/penguins/: CMakeLists.txt  Cloud.cpp  Cloud.h  Crab.cpp  Crab.h  Fish.cpp  Fish.h  Penguin.cpp  Penguin.h  main.cpp
samples/penguins/gfx/: fish.tsp
samples/z-order/: Background.h  Bird.h  CMakeLists.txt  Cloud.h  main.cpp
src/: CMakeLists.txt  YAnimatedSprite.cpp  YFileSystem.cpp  YGameObject.cpp  YMain.cpp  YObject.cpp  YObjectManager.cpp  YPoint.cpp  YSprite.cpp  YSpriteManager.cpp  YSpriteSheet.cpp  YSpriteSheetManager.cpp  YTransformations.cpp  YVector.cpp
